[gd_scene load_steps=36 format=3 uid="uid://cgh8rpjcbtumk"]

[ext_resource type="Script" path="res://script/character/player.gd" id="1_bhlyp"]
[ext_resource type="Texture2D" uid="uid://dje210udxjjbv" path="res://assets/Character/Run mc.png" id="2_t7hr3"]
[ext_resource type="Texture2D" uid="uid://deqq35s0p23ds" path="res://assets/Character/dead.png" id="2_x2q8u"]
[ext_resource type="Texture2D" uid="uid://dpgyg7q6kc8ti" path="res://assets/Character/Attack mc.png" id="3_0sa82"]
[ext_resource type="Script" path="res://script/character/playerstatemachine.gd" id="4_017x4"]
[ext_resource type="Script" path="res://script/Enemies/Snail/damageable.gd" id="5_kbj72"]
[ext_resource type="Texture2D" uid="uid://cugobu1gdbnhl" path="res://assets/Character/Idle mc.png" id="5_wepb3"]
[ext_resource type="Script" path="res://scene/player/movement.gd" id="5_wywmr"]
[ext_resource type="Script" path="res://script/character/StateDebug.gd" id="6_merlh"]
[ext_resource type="Script" path="res://scene/player/Attack.gd" id="7_rvi6e"]
[ext_resource type="Script" path="res://script/character/Sword_hitbox.gd" id="9_b41sq"]
[ext_resource type="Script" path="res://script/character/sword_facing.gd" id="10_gor4h"]
[ext_resource type="Script" path="res://script/character/death.gd" id="10_np142"]
[ext_resource type="Script" path="res://script/character/Hit.gd" id="11_6bnae"]
[ext_resource type="Script" path="res://script/UI/Lhealthabel.gd" id="15_lai6b"]
[ext_resource type="PackedScene" path="res://scene/player/health_bar.tscn" id="16_032n5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ah4xp"]
radius = 8.0
height = 44.0

[sub_resource type="Animation" id="Animation_lbtjx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_c1mme"]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_0sa82")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sword_hitbox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_obig7"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_x2q8u")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_hkj3n"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_wepb3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_safpj"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_t7hr3")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82xgr"]
_data = {
"RESET": SubResource("Animation_lbtjx"),
"attack": SubResource("Animation_c1mme"),
"death": SubResource("Animation_obig7"),
"idle": SubResource("Animation_hkj3n"),
"run": SubResource("Animation_safpj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lqn24"]
animation = &"attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ktr1w"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jt6ha"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kww58"]
animation = &"run"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ewvt2"]
animation = &"idle"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_ucbww"]
blend_point_0/node = SubResource("AnimationNodeAnimation_jt6ha")
blend_point_0/pos = 1.0
blend_point_1/node = SubResource("AnimationNodeAnimation_kww58")
blend_point_1/pos = -1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_ewvt2")
blend_point_2/pos = 0.0
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2g4jv"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mfi3v"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_i07u0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ch1qv"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3cckj"]
states/Start/position = Vector2(186, 100)
states/attack/node = SubResource("AnimationNodeAnimation_lqn24")
states/attack/position = Vector2(369, 14)
states/death/node = SubResource("AnimationNodeAnimation_ktr1w")
states/death/position = Vector2(500, 100)
states/move/node = SubResource("AnimationNodeBlendSpace1D_ucbww")
states/move/position = Vector2(369, 100)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_2g4jv"), "move", "attack", SubResource("AnimationNodeStateMachineTransition_mfi3v"), "attack", "move", SubResource("AnimationNodeStateMachineTransition_i07u0"), "move", "death", SubResource("AnimationNodeStateMachineTransition_ch1qv")]
graph_offset = Vector2(-216, -38)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mn0hd"]
size = Vector2(31, 53)

[node name="player" type="CharacterBody2D"]
position = Vector2(150, 100)
collision_layer = 2
script = ExtResource("1_bhlyp")
speed = 150.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 3)
shape = SubResource("CapsuleShape2D_ah4xp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("5_wepb3")
offset = Vector2(3, 0)
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_82xgr")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
active = false
tree_root = SubResource("AnimationNodeStateMachine_3cckj")
anim_player = NodePath("../AnimationPlayer")
parameters/move/blend_position = -0.183183

[node name="damageable" type="Node" parent="."]
script = ExtResource("5_kbj72")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state", "character", "animation_tree")]
script = ExtResource("4_017x4")
current_state = NodePath("Movement")
character = NodePath("..")
animation_tree = NodePath("../AnimationTree")

[node name="Movement" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("attack_state")]
script = ExtResource("5_wywmr")
attack_state = NodePath("../Attack")

[node name="Attack" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("return_state")]
script = ExtResource("7_rvi6e")
return_state = NodePath("../Movement")
can_move = false

[node name="Death" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_np142")
can_move = false

[node name="Hit" type="Node" parent="PlayerStateMachine" node_paths=PackedStringArray("Damageable", "character_state_machine", "dead_state", "return_state")]
script = ExtResource("11_6bnae")
Damageable = NodePath("../../damageable")
character_state_machine = NodePath("..")
dead_state = NodePath("../Death")
return_state = NodePath("../Movement")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Hit"]
wait_time = 0.25
one_shot = true

[node name="Death_timer" type="Timer" parent="PlayerStateMachine/Hit"]
wait_time = 1.5

[node name="StateDebug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
visible = false
offset_left = -40.0
offset_top = -51.0
offset_right = 45.0
offset_bottom = -28.0
text = "state:              "
script = ExtResource("6_merlh")
state_machine = NodePath("../PlayerStateMachine")

[node name="Sword_hitbox" type="Area2D" parent="." node_paths=PackedStringArray("player")]
collision_layer = 0
collision_mask = 4
monitoring = false
script = ExtResource("9_b41sq")
player = NodePath("..")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword_hitbox"]
position = Vector2(27.5, -1.5)
shape = SubResource("RectangleShape2D_mn0hd")
script = ExtResource("10_gor4h")
facing_left_position = Vector2(-27.5, -1.5)
facing_right_position = Vector2(27.5, -1.5)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -36.0
offset_top = -72.0
offset_right = 10.0
offset_bottom = -49.0
text = "YEEEE"
script = ExtResource("15_lai6b")

[node name="HealthBar" parent="." instance=ExtResource("16_032n5")]
offset_left = -30.0
offset_top = 29.0
offset_right = 33.0
offset_bottom = 38.0
max_value = 70.0
value = 70.0

[connection signal="animation_finished" from="AnimationTree" to="PlayerStateMachine/Attack" method="_on_animation_tree_animation_finished"]
[connection signal="health_ui" from="damageable" to="Label" method="_on_damageable_health_ui"]
[connection signal="health_ui" from="damageable" to="HealthBar" method="_on_damageable_health_ui"]
[connection signal="timeout" from="PlayerStateMachine/Hit/Timer" to="PlayerStateMachine/Hit" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Hit/Death_timer" to="PlayerStateMachine/Hit" method="_on_death_timer_timeout"]
[connection signal="body_entered" from="Sword_hitbox" to="Sword_hitbox" method="_on_body_entered"]
